Upgrade to java 17 and spring boot 2.7.2
Signed-off-by: Gerben Kroes <gerben@kroesctrl.nl>