@@ -42,7 +42,7 @@
   </distributionManagement>
 
   <properties>
-    <java.version>1.8</java.version>
+    <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <module.baseUri>${project.baseUri}/../</module.baseUri>
@@ -58,7 +58,7 @@
     <reactor.version>2020.0.22</reactor.version>
     <assertj.version>3.16.1</assertj.version>
     <xmlunit.version>1.6</xmlunit.version>
-    <mockito.core.version>4.1.0</mockito.core.version>
+    <mockito.core.version>4.8.0</mockito.core.version>
     <okhttp3.mockwebserver.version>4.9.1</okhttp3.mockwebserver.version>
     <apache.wss4j.version>1.6.19</apache.wss4j.version>
     <servlet.version>4.0.1</servlet.version>
@@ -69,7 +69,7 @@
     <javax.validation.api.version>2.0.1.Final</javax.validation.api.version>
     <junit.version>5.7.0</junit.version>
     <junit.platform.launcher.version>1.6.2</junit.platform.launcher.version>
-    <byte.buddy.version>1.10.18</byte.buddy.version>
+    <byte.buddy.version>1.12.17</byte.buddy.version>
     <joda.version>2.10.6</joda.version>
     <flyway.version>7.3.0</flyway.version>
     <slf4j.version>1.7.30</slf4j.version>
@@ -95,6 +95,7 @@
     <maven.enforcer.maven.version>3.8.5</maven.enforcer.maven.version>
     <jaxb2.maven.plugin.version>2.5.0</jaxb2.maven.plugin.version>
     <jaxb.api.version>2.3.1</jaxb.api.version>
+    <jaxb.core.version>4.0.1</jaxb.core.version>
     <spotbugs.maven.plugin.version>4.6.0.0</spotbugs.maven.plugin.version>
     <pmd.maven.plugin.version>3.16.0</pmd.maven.plugin.version>
     <checkstyle.maven.plugin.version>3.1.2</checkstyle.maven.plugin.version>
@@ -122,7 +123,7 @@
     <protobuf.version>2.4.1</protobuf.version>
     <guava.version>31.1-jre</guava.version>
     <spotbugs.version>4.6.0</spotbugs.version>
-    <jacoco.version>0.8.5</jacoco.version>
+    <jacoco.version>0.8.8</jacoco.version>
     <selenium.java.version>3.141.59</selenium.java.version>
     <SunriseSunsetCalculator.version>1.2</SunriseSunsetCalculator.version>
     <ant.junit.version>1.10.8</ant.junit.version>
@@ -138,7 +139,7 @@
     <spring.kafka.version>2.4.7.RELEASE</spring.kafka.version>
     <!-- spring-kafka-test needs a 2.12 version of the scala libraries -->
     <scala.lang.version>2.12.11</scala.lang.version>
-    <lombok.version>1.18.18</lombok.version>
+    <lombok.version>1.18.24</lombok.version>
     <hivemq-mqtt-client.version>1.2.0</hivemq-mqtt-client.version>
     <apache.commons.io.version>2.11.0</apache.commons.io.version>
     <!-- Default always skip integration tests, to ensure all developer data
@@ -149,6 +150,9 @@
     <skipITCoverage>true</skipITCoverage>
     <!-- Default always skip creating a test jar with dependencies tests -->
     <skipTestJarWithDependenciesAssembly>true</skipTestJarWithDependenciesAssembly>
+
+    <!-- Command-line option to pass arguments for surefire -->
+    <surefireArgLine/>
   </properties>
 
   <dependencyManagement>
@@ -573,6 +577,16 @@
         <groupId>javax.xml.bind</groupId>
         <artifactId>jaxb-api</artifactId>
         <version>${jaxb.api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-core</artifactId>
+        <version>${jaxb.core.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>${jaxb.core.version}</version>
       </dependency>
 
       <!-- Joda Time (Date/Time functions) -->
@@ -1211,7 +1225,10 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven.surefire.plugin.version}</version>
           <configuration>
-            <argLine>${surefireArgLine}</argLine>
+            <argLine>
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              ${surefireArgLine}
+            </argLine>
             <excludes>
               <exclude>**/*$*</exclude>
               <!-- Cucumber integration tests, included with Failsafe. -->
